# gst-plugins-rs

./: .gitignore  CLAUDE.md  Cargo.toml  GSTREAMER_RTSP_API.md  fallbacksrc-architecture.md  mediamtx-dual.yml  mediamtx.yml  multi-stream-recording-inference-design.md  rtsp-intermittent-connection-report.md  server.crt  server.key
apps/stream-manager/: Cargo.toml  README.md  TODO.md  config.cpu.example.toml  config.example.toml
apps/stream-manager/.prp-completed/: prp-01.done  prp-02.done  prp-03.done  prp-04.done  prp-05.done  prp-06.done  prp-07.done  prp-08.done  prp-11.done  prp-12.done  prp-13.done  prp-14.done  prp-15.done  prp-16.done  prp-17.done  prp-18.done  prp-19.done  prp-20.done  prp-21.done  prp-22.done  prp-23.done  prp-24.done  prp-25.done  prp-26.done  prp-27.done  prp-28.done  prp-29.done
apps/stream-manager/docs/: API.md  CONFIG.md  DEPLOYMENT.md  TROUBLESHOOTING.md
apps/stream-manager/migrations/: 001_initial_schema.sql
apps/stream-manager/prps/: 02-configuration-layer.md  05-stream-source-management.md  07-recording-branch.md  08-inter-pipeline-communication.md  10-health-monitoring.md  13-metrics-statistics.md  16-storage-management.md  17-disk-rotation.md  21-nvidia-inference-branch.md  25-rtsp-server-proxy.md  26-webrtc-server.md  28-integration-testing.md  WEB-UI-SUMMARY.md  prp-30-frontend-setup.md  prp-31-static-file-serving.md  prp-32-base-layout.md  prp-33-api-client.md  prp-34-websocket-client.md  prp-35-authentication-ui.md  prp-36-dashboard-overview.md  prp-37-stream-list.md  prp-38-stream-detail.md  prp-39-recording-management.md  prp-40-configuration-editor.md  prp-41-metrics-visualization.md  prp-42-log-viewer.md  prp-43-notifications-alerts.md  prp-44-mobile-optimization.md  prp-45-help-documentation.md  prp-46-integration-testing.md
apps/stream-manager/scripts/: install.sh  uninstall.sh
apps/stream-manager/src/: lib.rs  main.rs
apps/stream-manager/systemd/: stream-manager.service
apps/stream-manager/tests/: integration_test.rs
apps/stream-manager/web-ui/: .gitignore  deno.json  index.html  tailwind.config.js  tsconfig.json  vite.config.ts
net/rtsp/: .gitlab-ci-debian.yml  ARCHITECTURE_RESEARCH_REPORT.md  Cargo.toml  FRAME_MONITORING.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  README.md  RECONNECTION_FLUSH_FIX.md  TESTING_README.md  TODO.md  codebase-review-report.md  test_reconnection.bat  test_reconnection_advanced.sh  test_reconnection_cleanup.sh
net/rtsp/PRPs/: 00-implementation-roadmap-performance-focused.md  00-wiring-fixes-roadmap.md  01-unit-test-framework.md  02-mock-rtsp-server.md  03-basic-authentication.md  06-connection-retry-logic.md  11-http-tunneling.md  12-connection-pooling.md  16-vod-pause-support.md  17-parallel-connection-racing.md  19-srtp-preparation.md  20-stream-selection.md  21-proxy-support.md  22-camera-compatibility-testing.md  23-rtcp-improvements.md  24-error-handling-improvement.md  28-adaptive-learning-retry.md  29-wire-retry-to-connections.md  31-basic-authentication-implementation.md  33-dynamic-racing-strategy.md  34-buffer-mode-property.md  39-timestamp-sync-properties.md  40-transport-protocol-enhancements.md  42-tls-ssl-properties.md  43-proxy-tunneling-properties.md  45-onvif-backchannel-properties.md  48-rtsp-action-methods.md  49-backchannel-action-methods.md  50-jitterbuffer-limit-signals.md  90-analysis-tokio-removal.md  91-gstreamer-rtsp-bindings-research.md  92-create-rtsp-connection-wrapper.md  93-remove-tokio-runtime.md  94-convert-udp-sockets.md  95-remove-async-command-queue.md  96-integration-testing.md
net/rtsp/debian/: README.Debian  changelog  control  copyright  postinst  postrm  prerm  rules
net/rtsp/docs/: AUTO_RETRY_MODE.md  CAMERA_QUIRKS.md  DISABLE_RETRANSMISSION.md  DOCKER_BUILD_NOTES.md  DOCKER_TESTING.md  DUAL_STREAM_TESTING.md  IMPLEMENTATION_STATUS.md  MEDIAMTX_RESILIENCE_CONFIG.md  RECONNECTION_TIMEOUT_ANALYSIS.md  RELEASE_CHECKLIST.md  STREAM_SYNC_SUMMARY.md  TCP_VS_UDP_UNSTABLE_LINKS.md  TESTING_QUICKREF.md  TESTING_README.md  TEST_SUITE.md  TOKIO_ANALYSIS.md  buffer-mode-investigation.md  rtsp2-investigation.md  rtsp2-migration-plan.md
net/rtsp/examples/: multi_stream_pattern.rs  rtspsrc_cleanup.rs  rtspsrc_cleanup_dual_stream.rs  rtspsrc_synced_dual_stream.rs
net/rtsp/scripts/: Dockerfile.test  build-deb.sh  degrade_dst_ip.sh  degrade_src_ip.sh  docker-test.sh  run-e2e-tests.bat  run-e2e-tests.sh  run-tests.bat  run-tests.ps1  run-tests.sh  run_integration_tests.bat  run_tests.sh  run_tests_docker.sh  test-deb-package.sh  test-tls.bat  test_dual_stream.sh  test_reconnection.sh  test_reconnection_advanced.sh  test_reconnection_cleanup.sh
net/rtsp/tests/: README.md  adaptive_retry_tests.rs  auth_tests.rs  auto_retry_tests.rs  backchannel_actions_test.rs  behavior_properties_test.rs  buffer_mode_tests.rs  camera_compat.rs  camera_compatibility_tests.rs  camera_config.rs  compat_benchmarks.rs  compat_ci.rs  compat_suite.rs  connection_racing.rs  e2e_inspection_tests.rs  e2e_integration_suite.rs  e2e_pipeline_tests.rs  e2e_plugin_tests.rs  e2e_visual_tests.rs  error_handling_tests.rs  error_messages_tests.rs  error_recovery_tests.rs  gst_server_integration.rs  integration.rs  integration_tests.rs  mock_server.rs  nat_tests.rs  network_properties_test.rs  ntp_time_source_test.rs  onvif_discovery.rs  pad_compatibility_tests.rs  parameter_tests.rs  performance_optimization_tests.rs  properties_tests.rs  proxy_tests.rs  reconnection_pad_tests.rs  retry.rs  rtcp_properties_test.rs  rtsp_test_server.rs  rtspsrc.rs  (+12 more)
utils/fallbackswitch/: Cargo.toml  README.md  TODO.md
utils/fallbackswitch/debian/: README.Debian  changelog  control  copyright  postinst  postrm  prerm  rules  triggers
utils/fallbackswitch/scripts/: build-deb.sh  test-deb-package.sh  validate-deb.sh
utils/livesync/: Cargo.toml  README.md
utils/livesync/debian/: README.Debian  changelog  control  copyright  postinst  postrm  prerm  rules  triggers
utils/livesync/scripts/: build-deb.sh  (+2 more)
utils/togglerecord/: Cargo.toml
utils/uriplaylistbin/: Cargo.toml  README.md
(+355 files in other folders)
