[package]
name = "gst-plugin-rtsp"
version.workspace = true
authors = ["Nirbheek Chauhan <nirbheek centricular com>"]
repository.workspace = true
license = "MPL-2.0"
description = "GStreamer RTSP Client Plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.99"
atomic_refcell = "0.1.13"
data-encoding = "2.9.0"
dirs = "6.0.0"
futures = { version = "0.3.31", optional = true }
gst = { workspace = true, features = ["v1_16"] }
gst-app = { workspace = true, features = ["v1_16"] }
gst-net = { workspace = true, features = ["v1_16"] }
gst-pbutils = { workspace = true, features = ["v1_16"] }
lru = "0.16.1"
rand = "0.9.2"
rtsp-types = "0.1.3"
sdp-types = "0.1.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", default-features = false, features = ["io-util", "macros", "net", "time", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional = true }
url = "2.5.7"

# Optional telemetry dependencies
console-subscriber = { version = "0.4.1", optional = true }
prometheus = { version = "0.14.0", optional = true }

[lib]
name = "gstrsrtsp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]
v1_18 = ["gst/v1_18", "gst-app/v1_18", "gst-net/v1_18", "gst-pbutils/v1_18", "gst-check/v1_18"]
v1_20 = ["v1_18", "gst/v1_20", "gst-app/v1_20", "gst-net/v1_20", "gst-pbutils/v1_20", "gst-check/v1_20"]
v1_24 = ["v1_20", "gst/v1_24", "gst-app/v1_24", "gst-net/v1_24", "gst-pbutils/v1_24", "gst-check/v1_24"]
adaptive = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
tracing = ["dep:tracing"]
tracing-subscriber = ["dep:tracing-subscriber"]
futures = ["dep:futures"]
prometheus = ["dep:prometheus"]
telemetry = ["tracing", "tracing-subscriber", "prometheus"]
default = ["futures", "adaptive", "telemetry"]
# default = ["futures"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-net-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[dev-dependencies]
gst-check = { workspace = true, features = ["v1_16"] }
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-test = "0.4.4"

[package.metadata.gstreamer]
release_date = "2025-07-16"
