[package]
name = "gst-plugin-rtsp"
version.workspace = true
authors = ["Nirbheek Chauhan <nirbheek centricular com>"]
repository.workspace = true
license = "MPL-2.0"
description = "GStreamer RTSP Client Plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.99"
atomic_refcell = "0.1.13"
base64 = "0.22"
bytes = "1.9"
data-encoding = "2.9.0"
dirs = "6.0.0"
md-5 = "0.10"
futures = { version = "0.3.31", optional = true }
gst = { workspace = true, features = ["v1_16"] }
gst-app = { workspace = true, features = ["v1_16"] }
gst-net = { workspace = true, features = ["v1_16"] }
gst-pbutils = { workspace = true, features = ["v1_16"] }
gst-rtsp = { workspace = true, features = ["v1_16"] }
gst-sdp = { workspace = true, features = ["v1_16"] }
lru = "0.16.1"
rand = "0.9.2"
rtsp-types = "0.1.3"
sdp-types = "0.1.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
socket2 = "0.6.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", default-features = false, features = ["io-util", "macros", "net", "time", "rt-multi-thread", "sync"] }
tokio-native-tls = "0.3"
tokio-stream = { version = "0.1.17" }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional = true }
url = "2.5.7"

# Optional telemetry dependencies
console-subscriber = { version = "0.4.1", optional = true }
prometheus = { version = "0.14.0", optional = true }
bitflags = "2.9.4"

[lib]
name = "gstrsrtsp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]
v1_18 = ["gst/v1_18", "gst-app/v1_18", "gst-net/v1_18", "gst-pbutils/v1_18", "gst-rtsp/v1_18", "gst-sdp/v1_18", "gst-check/v1_18"]
v1_20 = ["v1_18", "gst/v1_20", "gst-app/v1_20", "gst-net/v1_20", "gst-pbutils/v1_20", "gst-rtsp/v1_20", "gst-sdp/v1_20", "gst-check/v1_20"]
v1_24 = ["v1_20", "gst/v1_24", "gst-app/v1_24", "gst-net/v1_24", "gst-pbutils/v1_24", "gst-rtsp/v1_24", "gst-sdp/v1_24", "gst-check/v1_24"]
adaptive = []
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
tracing = ["dep:tracing"]
tracing-subscriber = ["dep:tracing-subscriber"]
futures = ["dep:futures"]
prometheus = ["dep:prometheus"]
telemetry = ["tracing", "tracing-subscriber", "prometheus"]
bench = []
integration-tests = []
# default = ["futures", "adaptive", "telemetry"]
default = ["futures"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-net-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[dev-dependencies]
gst-check = { workspace = true, features = ["v1_16"] }
serial_test = "3.2.0"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-test = "0.4.4"
chrono = "0.4"
toml = "0.9.5"

[package.metadata.deb]
name = "gst-plugin-rtsp"
maintainer = "GStreamer Rust Plugins Maintainers <gstreamer-rust@lists.freedesktop.org>"
copyright = "2020-2024, Nirbheek Chauhan <nirbheek@centricular.com>"
license-file = ["LICENSE-MPL-2.0", "4"]
extended-description = """\
GStreamer plugin providing RTSP client functionality.
This plugin contains:
  - rtspsrc: RTSP client source element
  - rtspauth: RTSP authentication handling
  - rtsptransport: RTSP transport layer management
These elements are useful for receiving and processing RTSP streams."""
depends = "$auto, gstreamer1.0-plugins-base (>= 1.16.0), libgstreamer1.0-0 (>= 1.16.0)"
section = "libs"
priority = "optional"
# Additional cargo-deb configuration
revision = "1"
conf-files = []
# Changelog for version tracking
changelog = "debian/changelog"
# Ensure proper stripping and compression
separate-debug-symbols = true
# Architecture will be auto-detected based on build target
preserve-symlinks = false
# Build flags - use release mode for optimized builds
features = ["futures"]
default-features = true
# Suggests and recommends
recommends = "gstreamer1.0-tools"
suggests = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"

# Asset installation for Debian package
assets = [
    ["target/release/libgstrsrtsp.so", "usr/lib/gstreamer-1.0/libgstrsrtsp.so", "644"],
    ["LICENSE-MPL-2.0", "usr/share/doc/gst-plugin-rtsp/", "644"],
    ["README.md", "usr/share/doc/gst-plugin-rtsp/", "644"],
    ["debian/changelog", "usr/share/doc/gst-plugin-rtsp/changelog.Debian", "644"]
]
