[package]
name = "gst-plugin-fallbackswitch"
version.workspace = true
authors = ["Sebastian Dröge <sebastian@centricular.com>", "Jan Schmidt <jan@centricular.com>"]
repository.workspace = true
license = "MPL-2.0"
edition.workspace = true
rust-version.workspace = true
description = "GStreamer Fallback Switcher and Source Plugin"

[dependencies]
gst.workspace = true
gst-base.workspace = true
gst-audio.workspace = true
gst-video.workspace = true
gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true, version = "0.14" }
gtk = { workspace = true, optional = true }
gio = { workspace = true, optional = true }
parking_lot = "0.12"
rand = "0.9"

[dev-dependencies]
gst-app.workspace = true
gst-check.workspace = true

[lib]
name = "gstfallbackswitch"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-fallbackswitch"
path = "examples/gtk_fallbackswitch.rs"
required-features = ["gtk", "gio", "gst-plugin-gtk4"]


[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
default = ["v1_16"]
static = []
capi = []
doc = ["gst/v1_18"]
v1_16 = ["gst/v1_16"]
v1_18 = ["gst/v1_18"]
v1_20 = ["gst/v1_20"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[package.metadata.deb]
name = "gst-plugin-fallbackswitch"
maintainer = "GStreamer Rust Plugins Maintainers <gstreamer-rust@lists.freedesktop.org>"
copyright = "2020-2024, Sebastian Dröge <sebastian@centricular.com>, Jan Schmidt <jan@centricular.com>"
license-file = ["LICENSE-MPL-2.0", "4"]
extended-description = """\
GStreamer plugin providing fallback switching and source elements.
This plugin contains:
  - fallbackswitch: Automatically switch between sources based on availability
  - fallbacksrc: Composite source with fallback capabilities
These elements are useful for live streaming applications requiring high availability."""
depends = "$auto, gstreamer1.0-plugins-base (>= 1.16.0)"
section = "libs"
priority = "optional"
# Use cargo-deb's automatic library detection instead of hardcoded paths
# This will properly handle multiarch paths
assets = [
    ["target/release/libgstfallbackswitch.so", "/usr/lib/*/gstreamer-1.0/", "644"],
    ["LICENSE-MPL-2.0", "/usr/share/doc/gst-plugin-fallbackswitch/", "644"],
    ["README.md", "/usr/share/doc/gst-plugin-fallbackswitch/", "644"]
]
# Additional cargo-deb configuration
revision = "1"
conf-files = []
triggers-file = []
changelog = "debian/changelog"
# Ensure proper stripping and compression
separate-debug-symbols = true
compress = true
# Architecture will be auto-detected based on build target
preserve-symlinks = false
# Build flags
features = ["v1_16"]
default-features = true
# System dependencies for building (build-depends)
build-depends = "cargo, rustc (>= 1.76), libgstreamer1.0-dev (>= 1.16.0), libgstreamer-plugins-base1.0-dev (>= 1.16.0), pkg-config"
# Suggests and recommends
recommends = "gstreamer1.0-tools"
suggests = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"

[package.metadata.gstreamer]
release_date = "2025-07-16"
