[package]
name = "gst-plugin-livesync"
version.workspace = true
authors = ["Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>"]
license = "MPL-2.0"
description = "Livesync Plugin"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gio = { workspace = true, optional = true }
gst.workspace = true
gst-audio.workspace = true
gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true }
gtk = { workspace = true, optional = true }
num-rational = { version = "0.4", default-features = false, features = [] }
parking_lot = "0.12"

[dev-dependencies]
gst-check.workspace = true

[lib]
name = "gstlivesync"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-livesync"
path = "examples/gtk_livesync.rs"
required-features = ["gtk", "gio", "gst-plugin-gtk4"]

[[test]]
name = "livesync"
path = "tests/livesync.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]
v1_16 = ["gst/v1_16"]
v1_18 = ["gst/v1_18"]
v1_20 = ["gst/v1_20"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-audio-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[package.metadata.deb]
name = "gst-plugin-livesync"
maintainer = "GStreamer Rust Plugins Maintainers <gstreamer-rust@lists.freedesktop.org>"
copyright = "2020-2024, Jan Alexander Steffens (heftig) <jan.steffens@ltnglobal.com>"
license-file = ["LICENSE-MPL-2.0", "4"]
extended-description = """\
GStreamer plugin providing priority-based automatic input selector element.
This plugin contains:
  - livesync: Automatically keep live source valid
This element is useful for live streaming applications requiring high availability."""
depends = "$auto, gstreamer1.0-plugins-base (>= 1.16.0), libgstreamer1.0-0 (>= 1.16.0)"
section = "libs"
priority = "optional"
# Additional cargo-deb configuration
revision = "1"
conf-files = []
# Changelog for version tracking
changelog = "debian/changelog"
# Ensure proper stripping and compression
separate-debug-symbols = true
# Architecture will be auto-detected based on build target
preserve-symlinks = false
# Build flags - use release mode for optimized builds
features = ["v1_16"]
default-features = true
# Suggests and recommends
recommends = "gstreamer1.0-tools"
suggests = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"

# Asset installation for Debian package - using multiarch paths
assets = [
    ["target/release/libgstlivesync.so", "usr/lib/gstreamer-1.0/libgstlivesync.so", "644"],
    ["LICENSE-MPL-2.0", "usr/share/doc/gst-plugin-livesync/", "644"],
    ["README.md", "usr/share/doc/gst-plugin-livesync/", "644"],
    ["debian/changelog", "usr/share/doc/gst-plugin-livesync/changelog.Debian", "644"]
]
