[package]
name = "gst-plugin-togglerecord"
version.workspace = true
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "MPL-2.0"
description = "GStreamer Toggle Record Plugin"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gst.workspace = true
gst-audio.workspace = true
gst-video.workspace = true
gst-plugin-gtk4 = { path = "../../video/gtk4", optional = true, version = "0.14" }
gtk = { workspace = true, optional = true }
gio = { workspace = true, optional = true }
parking_lot = "0.12"

[dev-dependencies]
either = "1.0"
gst-check.workspace = true

[lib]
name = "gsttogglerecord"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "gtk-recording"
path = "examples/gtk_recording.rs"
required-features = ["gtk", "gio", "gst-plugin-gtk4"]

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]
v1_16 = ["gst/v1_16", "gst-audio/v1_16", "gst-video/v1_16"]
v1_18 = ["gst/v1_18", "gst-audio/v1_18", "gst-video/v1_18"]
v1_20 = ["gst/v1_20", "gst-audio/v1_20", "gst-video/v1_20"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
[package.metadata.deb]
name = "gst-plugin-togglerecord"
maintainer = "GStreamer Rust Plugins Maintainers <gstreamer-rust@lists.freedesktop.org>"
copyright = "2020-2024, Sebastian Dröge <sebastian@centricular.com>, Jan Schmidt <jan@centricular.com>"
license-file = ["LICENSE-MPL-2.0", "4"]
extended-description = """\
GStreamer plugin providing fallback switching and source elements.
This plugin contains:
  - togglerecord: A source element that can toggle recording on and off based on input events."""
depends = "$auto, gstreamer1.0-plugins-base (>= 1.16.0), libgstreamer1.0-0 (>= 1.16.0)"
section = "libs"
priority = "optional"
# Additional cargo-deb configuration
revision = "1"
conf-files = []
# Changelog for version tracking
changelog = "debian/changelog"
# Ensure proper stripping and compression
separate-debug-symbols = true
# compress = true
# # Strip binaries for smaller package size
# strip = true
# Architecture will be auto-detected based on build target
preserve-symlinks = false
# Build flags - use release mode for optimized builds
features = ["v1_16"]
default-features = true
# # System dependencies for building (build-depends)
# # Note: Rust toolchain is handled separately and not listed here
# build-depends = "libgstreamer1.0-dev (>= 1.16.0), libgstreamer-plugins-base1.0-dev (>= 1.16.0), pkg-config"
# Suggests and recommends
recommends = "gstreamer1.0-tools"
suggests = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"

# [package.metadata.$().deb]
# Asset installation for Debian package
assets = [
    ["target/release/libgsttogglerecord.so", "usr/lib/gstreamer-1.0/libgsttogglerecord.so", "644"],
    ["LICENSE-MPL-2.0", "usr/share/doc/gst-plugin-togglerecord/", "644"],
    ["README.md", "usr/share/doc/gst-plugin-togglerecord/", "644"],
    ["debian/changelog", "usr/share/doc/gst-plugin-togglerecord/changelog.Debian", "644"]
]

[package.metadata.gstreamer]
release_date = "2025-07-16"
