[package]
name = "gst-plugin-uriplaylistbin"
version.workspace = true
authors = ["Guillaume Desmottes <guillaume.desmottes@onestream.live>"]
repository.workspace = true
license = "MPL-2.0"
edition.workspace = true
description = "GStreamer Playlist Playback Plugin"
rust-version.workspace = true

[dependencies]
gst = { workspace = true, features = ["v1_24"] }
anyhow = "1"
clap = { version = "4", optional = true, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
gst-app.workspace = true
url = "2.2"
more-asserts = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "system-proxy"] }

[lib]
name = "gsturiplaylistbin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "playlist"
path = "examples/playlist.rs"
required-features = ["clap"]

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]
v1_16 = ["gst/v1_16"]
v1_18 = ["gst/v1_18"]
v1_20 = ["gst/v1_20"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

[package.metadata.deb]
name = "gst-plugin-uriplaylistbin"
maintainer = "GStreamer Rust Plugins Maintainers <gstreamer-rust@lists.freedesktop.org>"
copyright = "2021-2024, Guillaume Desmottes <guillaume.desmottes@onestream.live>"
license-file = ["LICENSE-MPL-2.0", "4"]
extended-description = """\
GStreamer plugin providing playlist playback functionality.
This plugin contains:
  - uriplaylistbin: Element for seamless playback of playlists
This element is useful for applications requiring continuous playback of multiple media files."""
depends = "$auto, gstreamer1.0-plugins-base (>= 1.24.0), libgstreamer1.0-0 (>= 1.24.0)"
section = "libs"
priority = "optional"
# Additional cargo-deb configuration
revision = "1"
conf-files = []
# Changelog for version tracking
changelog = "debian/changelog"
# Ensure proper stripping and compression
separate-debug-symbols = true
# Architecture will be auto-detected based on build target
preserve-symlinks = false
# Build flags - use release mode for optimized builds
features = ["v1_16"]
default-features = true
# Suggests and recommends
recommends = "gstreamer1.0-tools"
suggests = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"

# Asset installation for Debian package - using multiarch paths
assets = [
    ["target/release/libgsturiplaylistbin.so", "usr/lib/gstreamer-1.0/libgsturiplaylistbin.so", "644"],
    ["LICENSE-MPL-2.0", "usr/share/doc/gst-plugin-uriplaylistbin/", "644"],
    ["README.md", "usr/share/doc/gst-plugin-uriplaylistbin/", "644"],
    ["debian/changelog", "usr/share/doc/gst-plugin-uriplaylistbin/changelog.Debian", "644"]
]

[package.metadata.gstreamer]
release_date = "2025-07-16"
